--- a/src/style/News.css
+++ b/src/style/News.css
@@ -430,11 +430,6 @@ trix-editor.trix-content {
     background: var(--color-mode-7);
 }
 
-.news-row[focus="right"] .news-img-container .news-img,
-.news-row[focus="left"] .news-img-container .news-img {
-    z-index: 200;
-}
-
 .news-row[focus=""] .news-img-container {
     display: none;
 }
@@ -689,6 +684,18 @@ trix-editor.trix-content {
 
 .carousel-item.active {
     display: flex !important;
+}
+
+.carousel-item {
+    height: 100%;
+}
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ff0000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ff0000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
 
 @media (max-width: 780px) {
