--- a/src/style/News.css
+++ b/src/style/News.css
@@ -686,7 +686,7 @@ trix-editor.trix-content {
     display: flex !important;
 }
 
-.caroussel-inner,
+.carousel-inner,
 .carousel-item {
     height: 100%;
 }
