--- a/css/nextcloudDestroyer.css
+++ b/css/nextcloudDestroyer.css
@@ -154,10 +154,10 @@
 
 /* basic modern patch */
 
-#app {
+body .app-intranetagglo #app {
     all: initial;
 }
 
-#app * {
+body .app-intranetagglo #app * {
     all: unset
 }
