--- a/css/nextcloudfix.css
+++ b/css/nextcloudfix.css
@@ -15,3 +15,11 @@
 .v-navigation-drawer {
     top: 50px !important;
 }
+
+.h2 {
+    font-weight: initial;
+    font-size: initial;
+    margin-bottom: initial;
+    line-height: initial;
+    color: inherit;
+}
