--- a/css/nextcloudfix.css
+++ b/css/nextcloudfix.css
@@ -33,6 +33,7 @@
     margin: 0;
     font-size: inherit;
     background-color: transparent;
+    border: 0;
     border-radius: 0;
     flex: 1 1 auto;
     line-height: 20px;
