--- a/css/nextcloudfix.css
+++ b/css/nextcloudfix.css
@@ -55,6 +55,22 @@
     width: 100%;
 }
 
-#app .ql-editor:active  {
+#app .ql-editor {
+    box-sizing: border-box;
+    line-height: 1.42;
+    height: 100%;
+    outline: 0;
+    overflow-y: auto;
+    padding: 12px 15px;
+    tab-size: 4;
+    -moz-tab-size: 4;
+    text-align: left;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    margin: 0;
+    background-color: transparent;
+}
+
+#app .ql-editor:active {
     background-color: transparent;
 }
