--- a/css/nextcloudfix.css
+++ b/css/nextcloudfix.css
@@ -109,3 +109,21 @@
     height: 28px;
     width: 28px;
 }
+
+#app .v-btn:not(.v-btn--round).v-size--large {
+    height: 44px;
+    min-width: 78px;
+    padding: 0 19.5555555556px;
+}
+
+#app .v-pagination__navigation {
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    border-radius: 4px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    height: 32px;
+    width: 32px;
+    margin: 0.3rem 10px;
+}
