--- a/css/nextcloudfix.css
+++ b/css/nextcloudfix.css
@@ -168,3 +168,15 @@
     -moz-user-select: none;
     user-select: none;
 }
+
+#app .v-pagination__navigation {
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    border-radius: 4px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    height: 32px;
+    width: 32px;
+    margin: 0.3rem 10px;
+}
