--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -1,3 +1,5 @@
+@import '~quill/dist/quill.snow.css';
+
 @font-face {
   font-family: "PetitaBold";
   font-style: normal;
@@ -21,6 +23,29 @@
   src: url("~@/assets/fonts/mdi/materialdesignicons-webfont.eot?#iefix&v=7.0.96") format("embedded-opentype"), url("~@/assets/fonts/mdi/materialdesignicons-webfont.woff2?v=7.0.96") format("woff2"), url("~@/assets/fonts/mdi/materialdesignicons-webfont.woff?v=7.0.96") format("woff"), url("~@/assets/fonts/mdi/materialdesignicons-webfont.ttf?v=7.0.96") format("truetype");
   font-weight: normal;
   font-style: normal;
+}
+
+.v-navigation-drawer {
+  height: calc(100vh - 50px) !important;
+}
+
+.v-application--wrap {
+  min-height: calc(100vh - 50px) !important;
+}
+
+.theme--dark .ql-stroke {
+  stroke: #fff !important;
+
+}
+
+.theme--dark .ql-picker-options {
+  background-color: #1E1E1E !important;
+  
+}
+
+.theme--dark .ql-picker-item::before,
+.theme--dark .ql-picker-label::before {
+  color: #fff !important;
 }
 
 :root {
