--- a/css/nextcloudpatch.css
+++ b/css/nextcloudpatch.css
@@ -32,7 +32,7 @@
 #app input {
     margin: 0;
     font-size: inherit;
-    background-color: transparent;\n       \.
+    background-color: transparent;
     border: 0;
     border-radius: 0;
     flex: 1 1 auto;
