--- a/css/nextcloudpatch.css
+++ b/css/nextcloudpatch.css
@@ -1,3 +1,10 @@
+#app blockquote {
+    border-left: 4px solid #ccc;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    padding-left: 16px;
+}
+
 #app button {
     padding: 0;
     width: auto;
